// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly with 1 expense 1`] = `
<div
  className="px-3 bg-light py-4"
>
  <div
    className="content-container py-2"
  >
    <h2
      className="font-weight-light content-container p-0"
    >
      Viewing 
      <span
        className="font-weight-bold"
      >
        1
      </span>
       
      expense
       totalling 
      <span
        className="font-weight-bold"
      >
        $255.00
      </span>
    </h2>
    <div>
      <Link
        className="btn btn-primary mt-3"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render ExpensesSummary correctly with mode expenses 1`] = `
<div
  className="px-3 bg-light py-4"
>
  <div
    className="content-container py-2"
  >
    <h2
      className="font-weight-light content-container p-0"
    >
      Viewing 
      <span
        className="font-weight-bold"
      >
        8
      </span>
       
      expenses
       totalling 
      <span
        className="font-weight-bold"
      >
        $25,546,848.00
      </span>
    </h2>
    <div>
      <Link
        className="btn btn-primary mt-3"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
